; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs-opengl/extr_gl-windows.c_gl_dummy_context_free.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs-opengl/extr_gl-windows.c_gl_dummy_context_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dummy_context = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.dummy_context*)* @gl_dummy_context_free to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @gl_dummy_context_free(%struct.dummy_context* %0) #0 {
  %2 = alloca %struct.dummy_context*, align 8
  store %struct.dummy_context* %0, %struct.dummy_context** %2, align 8
  %3 = call i32 @wglMakeCurrent(i32* null, i32* null)
  %4 = load %struct.dummy_context*, %struct.dummy_context** %2, align 8
  %5 = getelementptr inbounds %struct.dummy_context, %struct.dummy_context* %4, i32 0, i32 1
  %6 = load i32, i32* %5, align 4
  %7 = call i32 @wglDeleteContext(i32 %6)
  %8 = load %struct.dummy_context*, %struct.dummy_context** %2, align 8
  %9 = getelementptr inbounds %struct.dummy_context, %struct.dummy_context* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = call i32 @DestroyWindow(i32 %10)
  %12 = load %struct.dummy_context*, %struct.dummy_context** %2, align 8
  %13 = call i32 @memset(%struct.dummy_context* %12, i32 0, i32 8)
  ret void
}

declare dso_local i32 @wglMakeCurrent(i32*, i32*) #1

declare dso_local i32 @wglDeleteContext(i32) #1

declare dso_local i32 @DestroyWindow(i32) #1

declare dso_local i32 @memset(%struct.dummy_context*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
